# actix-web-learn

actix-01/: Cargo.toml
actix-01/src/: main.rs  routes.rs
actix-01/src/handlers/: auth_handler.rs
actix-basic/src/models/: base_response.rs
actix-basic/src/services/: auth_service.rs
actix-custom-response/: Cargo.toml
actix-custom-response/src/: main.rs
actix-custom-response/src/helpers/: response.rs
actix-middleware/: Cargo.toml
actix-middleware/src/: main.rs
