[package]
name = "actix-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "macros", "mysql", "chrono" ] }
futures = "0.3"